
  - The list of used suppressions (shown when giving the -v option)
    now shows for the leak suppressions how many blocks and bytes were
    suppressed during the last leak search for each suppression.
    The suppression count for a leak suppression shows the total nr
    of loss records which were suppressed by this suppression.

* ==================== OTHER CHANGES ====================

  - Option --merge-recursive-frames=<number> tells Valgrind to
    detect and merge (collapse) recursive calls when recording stack traces.
    When your program has recursive algorithms, this limits
    the memory used by Valgrind for recorded stack traces and avoid
    recording uninteresting repeated calls.
    The value is changeable using the monitor command
    'v.set merge-recursive-frames'.

  - valgrind.h has a new request VALGRIND_MONITOR_COMMAND.
    This can be used to execute gdbserver monitor commands from
    the client program.

  - Addition of GDB server monitor command 'v.info open_fds' that gives the
    list of open file descriptors and additional details.

  - Optional message in the 'v.info n_errs_found' monitor command (e.g.
     'v.info n_errs_found test 1234 finished'), allowing to have
    a comment string in the process output, separating errors of different
    tests (or test phases).

  - Addition of GDB server monitor command 'v.info execontext' that shows
    information about the stack traces recorded by Valgrind.
    This can be used to analyse one possible cause of Valgrind high
    memory usage for some programs.

  - Addition of GDB server monitor command
    'v.do expensive_sanity_check_general' that checks the sanity
    of various Valgrind aspects, including the Valgrind heap.

  - The list of used suppressions (shown when giving the -v option)
    now gives the filename and linenr where the suppression is defined.

  - remote debuginfo server + overhaul of debuginfo reading

  - some fixes for OSX 10.8
